syntax = "proto3";

package ngproto;
option go_package = "github.com/ngchain/ngcore/ngtypes/ngproto";

message Account {
  uint64 num = 1;
  bytes owner = 2; // address -> balance in anonymous fields

  bytes contract = 5; // separate the code and state
  bytes context = 6;
}

enum NetworkType {
  ZERONET = 0; // ZERONET acts as the regression testnet
  TESTNET = 1; // TESTNET uses odd number
  MAINNET = 2; // MAINNET uses even number
  // TEST_FUTURE = 3;
  // MAIN_FUTURE = 4;
}

message BlockHeader {
  NetworkType network = 1;

  uint64 height = 2;
  int64 timestamp = 3;

  bytes prev_block_hash = 4;
  bytes trie_hash = 5;
  
  bytes difficulty = 7; // diff = maxTarget / Big(header_hash)
  bytes nonce = 8;

  repeated BlockHeader subs = 9; // no txs inside
}

message Block {
  BlockHeader header = 1;
  repeated Tx txs = 10; // miner should build the generate tx by themselves
}

enum TxType {
  INVALID = 0;
  GENERATE = 1;
  REGISTER = 2;
  LOGOUT = 3;

  TRANSACT = 4;

  APPEND = 5; // add content to the tail of contract
  DELETE = 6;

  LOCK = 7; // cannot assign nor append, but can run vm
  UNLOCK = 8; // disable vm, but enable assign and append
}

// Or you can call it Op
message Tx {
  NetworkType network = 1;
  TxType type = 2;

  bytes prev_block_hash = 3; // only available within one block

  uint64 convener = 4; // account num required
  repeated bytes participants = 5;
  bytes fee = 6;
  repeated bytes values = 7;

  // extension
  bytes extra = 8;

  bytes sign = 9; // the abbr of signature
}

// the structure of Append Tx 's Extra
message AppendExtra {
    uint64 pos = 1;
    bytes content = 2;
}

// the structure of Delete Tx 's Extra
message DeleteExtra {
    uint64 pos = 1; // should match part of contract
    bytes content = 2; // the new content of that part of contract
}

// Sheet is a simplified States
message Sheet {
  NetworkType network = 1;
  uint64 height = 2;
  bytes block_hash = 3; // use prevBlockHash to replace height to keep uniqueness
  map<string, bytes> anonymous = 10; // bs58_address(aka anonymous recipient) -> balance
  map<uint64, Account> accounts = 11;
}
